use valueOf instead of ctor