@@ -32,10 +32,10 @@ public class IdentityListTest extends TestCase
 {
 
 	private IdentityList<Integer> ls;
-	private Integer a1 = new Integer(1);
-	private Integer a2 = new Integer(2);
-	private Integer b1 = new Integer(1);
-	private Integer b2 = new Integer(2);
+	private Integer a1 = Integer.valueOf(1);
+	private Integer a2 = Integer.valueOf(2);
+	private Integer b1 = Integer.valueOf(1);
+	private Integer b2 = Integer.valueOf(2);
 
 	@Override
 	@Before
